Build from  the FA demo

--- a/templates/splash.hbs
+++ b/templates/splash.hbs
@@ -1,12 +1,20 @@
 <div class="component__inner splash__inner">
   {{> component this}} 
 
-  {{!-- <div class="splash__main">
-  {{#each _items}}
+ <div class="splash__main">
 
-  {{/each}}
+    <img class="splash__image_large" src="{{_graphic.large}}" aria-label="{{{_graphic.alt}}}"/>
+    <img class="splash__image_small" src="{{_graphic.small}}" aria-label="{{{_graphic.alt}}}"/>
+    <img class="splash__image_portrait" src="{{_graphic.portrait}}" aria-label="{{{_graphic.alt}}}"/>
+
+    <div class="splash__main-title" >{{splashTitle}}</div>
+
+    <div class="splash__button">
+      <button class="splash__start-btn btn js-splash-start-click" aria-label="{{{buttonText}}}">
+        <span>{{{buttonText}}}</span>
+      </button>
+    </div>
+
   </div> 
-  
-  {{#if body}} {{/if}} --}}
 
 </div>
