--- a/less/splash.less
+++ b/less/splash.less
@@ -1,3 +1,88 @@
 .splash {
+    width: 100%;
+    height: 92vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: @white;
     
+    &__inner {
+        height: 100%;
+    }
+    
+    &__main {
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        img {
+            object-fit: contain;
+            object-position: left;
+            width: 100%;
+            height: 100%;            
+        }
+
+        .splash__image_large {
+            display: block;
+            @media (max-width: @device-width-small) {
+                display: none;
+            }
+        }
+
+        .splash__image_small {
+            display: none;
+            @media (max-width: @device-width-small) {
+                display: block;
+            }
+        }
+
+        .splash__image_portrait {
+            display: none;
+        }
+
+        @media (orientation: portrait) {
+            .splash__image_large, .splash__image_small {
+                display: none;
+            }   
+            .splash__image_portrait {
+                display: block;
+            }
+        }
+
+    }
+
+    &__main-title {
+        .titles
+    }
+
+    &__button {
+        position: absolute;
+        top: 60%;
+        left: 7%;
+
+        @media (max-width: @device-width-medium) and (orientation: landscape) {
+            left: 6.5%;
+        }
+        @media (max-width: @device-width-medium) and (orientation: portrait) {
+            left: 5%;
+        }
+
+        @media (max-width: @device-width-small) and (orientation: landscape) {
+            left: 5.5%;
+        }
+        @media (max-width: @device-width-small) and (orientation: portrait) {
+            left: 2%;
+        }
+
+        
+        .splash__start-btn {
+            background: url('assets/UI/btnStart.png');
+           
+            .custom-button;
+        }
+
+    }
 }
