--- a/templates/splash.hbs
+++ b/templates/splash.hbs
@@ -3,9 +3,9 @@
 
  <div class="splash__main">
 
-    <img class="splash__image_large" src="{{_graphic.large}}" aria-label="{{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true"{{/if}}" />
-    <img class="splash__image_small" src="{{_graphic.small}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true"{{/if}} />
-    <img class="splash__image_portrait" src="{{_graphic.portrait}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true"{{/if}} />
+    <img class="splash__image_large" src="{{_graphic.large}}" aria-label="{{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}}" />
+    <img class="splash__image_small" src="{{_graphic.small}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}} />
+    <img class="splash__image_portrait" src="{{_graphic.portrait}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}} />
 
     <div class="splash__main-title" >{{splashTitle}}</div>
 
