mobile image size && title position

--- a/less/splash.less
+++ b/less/splash.less
@@ -19,7 +19,7 @@
         position: relative;
 
         img {
-            object-fit: contain;
+            object-fit: cover;
             object-position: left;
             width: 100%;
             height: 100%;            
@@ -27,31 +27,60 @@
 
         .splash__image_large {
             display: block;
-            @media (max-width: @device-width-small) {
+
+            @media (max-width: 823px) {
                 display: none;
             }
         }
 
         .splash__image_small {
             display: none;
-            @media (max-width: @device-width-small) {
+
+            @media (max-width: 823px) and (orientation: landscape) {
                 display: block;
             }
         }
 
         .splash__image_portrait {
             display: none;
+
+            @media (orientation: portrait) {
+                display: block;
+            }
+
+            @media (max-width: @device-width-small) and (orientation: portrait) {
+                display: none;
+            }
         }
 
-        @media (orientation: portrait) {
-            .splash__image_large, .splash__image_small {
-                display: none;
-            }   
-            .splash__image_portrait {
+        .splash__image_mobile {
+            display: none;
+            
+            @media (max-width: @device-width-small) and (orientation: portrait) {
                 display: block;
             }
         }
 
+    }
+
+    &__main-title {
+        position: absolute;
+        top:10%;
+        left: 7%;
+
+        @media (max-width: @device-width-medium) and (orientation: landscape) {
+            left: 6.5%;
+        }
+        @media (max-width: @device-width-medium) and (orientation: portrait) {
+            left: 5%;
+        }
+
+        @media (max-width: @device-width-small) and (orientation: landscape) {
+            left: 5.5%;
+        }
+        @media (max-width: @device-width-small) and (orientation: portrait) {
+            left: 5%;
+        }
     }
 
     &__button {
@@ -70,7 +99,7 @@
             left: 5.5%;
         }
         @media (max-width: @device-width-small) and (orientation: portrait) {
-            left: 2%;
+            left: 5%;
         }
 
         
