--- a/templates/splash.hbs
+++ b/templates/splash.hbs
@@ -6,8 +6,9 @@
     <img class="splash__image_large" src="{{_graphic.large}}" aria-label="{{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}}" />
     <img class="splash__image_small" src="{{_graphic.small}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}} />
     <img class="splash__image_portrait" src="{{_graphic.portrait}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}} />
+    <img class="splash__image_mobile" src="{{_graphic.mobile}}" {{#if _graphic.alt}}aria-label="{{_graphic.alt}}"{{else}}aria-hidden="true" alt=""{{/if}} />
 
-    <div class="splash__main-title" >{{splashTitle}}</div>
+    <div class="splash__main-title" >{{{splashTitle}}}</div>
 
     <div class="splash__button">
       <button class="splash__start-btn btn js-splash-start-click" aria-label="{{{buttonText}}}">
